--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,17 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<name>Explore With Me</name>
-	<modules>
-		<module>main-service</module>
-		<module>stats-service</module>
-	</modules>
-
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+	<name>Explore With Me</name>
+
+	<modules>
+		<module>ewm-service</module>
+		<module>stats-service</module>
+	</modules>
 
 	<properties>
 		<java.version>11</java.version>
