--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - TZ:Europe/Moscow
+      - TZ=Europe/Moscow
       - POSTGRES_HOST=stats-db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=ewm-statistics
@@ -26,7 +26,7 @@ services:
       - POSTGRES_DB=ewm-statistics
       - POSTGRES_USER=ewm-statistics
       - POSTGRES_PASSWORD=ewm-statistics
-      - TZ:Europe/Moscow
+      - TZ=Europe/Moscow
 
   ewm-service:
     build: ewm-service
@@ -39,7 +39,7 @@ services:
       - ewm-db
       - stats-server
     environment:
-      - TZ:Europe/Moscow
+      - TZ=Europe/Moscow
       - POSTGRES_HOST=ewm-db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=ewm
@@ -57,4 +57,4 @@ services:
       - POSTGRES_DB=ewm
       - POSTGRES_USER=ewm
       - POSTGRES_PASSWORD=ewm
-      - TZ:Europe/Moscow
+      - TZ=Europe/Moscow
